# mayo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONSIDERATIONS.md  LICENSE  NOTES.md  README.md  TODO.md  build.cpp  premake5.lua  zoo.10x
ccb/: README.md  ccb.hpp
lua/: globals.lua  plugs.lua
mayo/: aligned_storage.hpp  array.hpp  basic.hpp  contiguous_iterator.hpp  enum.hpp  expected.hpp  function_ref.hpp  fwd.hpp  mayo.hpp  span.hpp  type_traits.hpp
mods/: premake5.lua
mods/refl/: type.hpp
mods/stdx/: complex_enum.hpp  enum.hpp  enum_variant.hpp  span.hpp  vector.hpp
sandbox/: main.cpp  premake5.lua
sandbox/static/shaders/: frag.spv  test.frag  vert.spv
sandbox/sut/: ShaderCompiler.cpp  ShaderCompiler.hpp  shader_compiler.cpp  shader_compiler.hpp
scripts/: clang-format.bat  clean-modules.bat  dev.bat  set-up.bat  update.bat  win-gen-proj.bat
scripts/dev/: debug.bat  dist.bat  release.bat
src/: CMakeLists.txt  main.cpp
src/core/: Log.hpp  aligned_storage.hpp  delegate.hpp  expected.hpp  fixed_string.hpp  lzdef.hpp  lzh.hpp
src/core/platform/: Input.hpp  Window.hpp
src/main/: Application.cpp  Application.hpp  EntryPoint.cpp  EntryPoint.hpp  application.cpp  application.hpp  entry.cpp  entry.hpp
src/tools/: aligned_storage.hpp  expected.hpp  fixed_string.hpp
static/shaders/: compile.bat
test/: CMakeLists.txt
test/core/: CMakeLists.txt  fixed_string_test.cpp
test/tools/: CMakeLists.txt  expected_test.cpp
tyrant/: basic.cpp  basic.hpp  core.cpp  core.hpp  log.hpp  logger.hpp  main.cpp  premake5.lua  render.cpp  render.hpp  roboto.embed  shader_compiler.cpp  shader_compiler.hpp  string.cpp  string.hpp  types.cpp  types.hpp  ui.cpp  ui.hpp
tyrant/assets/: Credits.psd  DeepForestParallax.psd  DeepForestWall.psd  HUD_BAR.ai  How_To_Play.psd  Main Menu Background.psd  Map.txt  Portal.psd  TYRANT SCRIPT.docx  TestMap.csv  TestMap2.csv
tyrant/assets/DOOR/: PortalSpriteSheet.psd
tyrant/assets/Dewan/: Dewan.psd
tyrant/assets/Font/: FontGenerator.psd  Fonts.psd  README.txt
tyrant/assets/Hexels/: Bull.hxl  BullCharging.hxl  BullDie.hxl  BullIdle.hxl  BullRushing.hxl  BullWalking.hxl  CastleBackground1.hxl  CastleBackground2.hxl  CastleBackground3.hxl  CastleBackground4.hxl  CastleFloor.hxl  CastlePlatform.hxl  CastleWall.hxl  Castle_Back_Layer.hxl  Lancer.hxl  LancerCharging.hxl  LancerDie.hxl  LancerIdle.hxl  Warrior.hxl  WarriorDie.hxl  WarriorIdle.hxl  WarriorWalking.hxl
tyrant/assets/MainMenu/: DeathOverlayBG.psd  MAINMENUBG.psd  MainMenuSheet.psd
tyrant/assets/Maps/: BrydonLevel1.csv  BrydonLevel1.xlsx  BrydonLevel2.csv  BrydonLevel2.xlsx  BrydonLevel3.csv  (+1 more)
tyrant/glfw/: glfw.cpp  glfw.hpp
tyrant/glue/: imgui_adapter.cpp  imgui_adapter.hpp
tyrant/memory/: arena.cpp  arena.hpp  linear_allocator.hpp
tyrant/os/: windows.cpp  windows.hpp
tyrant/platform/: windows.cpp  windows.hpp
tyrant/shaders/: color.frag  color.vert
xtr/: premake5.lua
xtr/refl/: any.hpp  node.hpp
xtr/stdx/: aligned_storage.hpp  complex_enum.hpp  contiguous_iterator.hpp  defer.hpp  enum.hpp  enum_variant.hpp  expected.hpp  function_ref.hpp  fwd.hpp  irange.hpp  span.hpp  type_traits.hpp  variant.hpp  vector.hpp
xtr/vma/: vk_mem_alloc.h
zoo/: #main.cpp#  imgui.ini  main.cpp  premake5.lua  zoo.hpp
zoo/core/: Array.hpp  Defines.hpp  Initializer.hpp  Input.cpp  Log.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp  allocator.hpp  array.hpp  fwd.hpp  input.cpp  input.hpp  macros.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
zoo/imgui/: defines.hpp  layer.cpp  layer.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  shader.hpp  window.cpp  window.hpp
zoo/main/: Application.cpp  Application.hpp  EntryPoint.cpp  EntryPoint.hpp  Entry_Point.cpp  Info.cpp  Info.hpp  Utility.cpp  Utility.hpp  entry_point.cpp  entry_point.hpp  info.cpp  info.hpp
zoo/refl/: refl.hpp  type.hpp
zoo/render/: DescriptorPool.cpp  DescriptorPool.hpp  Descriptor_Pool.cpp  Descriptor_Pool.hpp  DeviceContext.cpp  DeviceContext.hpp  Device_Context.cpp  Device_Context.hpp  Engine.cpp  Engine.hpp  Framebuffer.cpp  Framebuffer.hpp  Pipeline.cpp  Pipeline.hpp  Query.cpp  Query.hpp  RenderPass.cpp  RenderPass.hpp  RenderPassx.cpp  RenderPassx.hpp  Render_Pass.cpp  Renderpass.cpp  Renderpass.hpp  Swapchain.cpp  Swapchain.hpp  Types.hpp  api.cpp  api.hpp  defines.hpp  descriptor_pool.cpp  descriptor_pool.hpp  device.cpp  device.hpp  device_context.cpp  device_context.hpp  engine.cpp  engine.hpp  framebuffer.cpp  framebuffer.hpp  fwd.cpp  (+18 more)
zoo/simp/: simp.cpp  simp.hpp
zoo/stdx/: enum.hpp  expected.hpp  fixed_string.hpp  function_ref.hpp  fwd.hpp  irange.hpp  span.hpp  type_traits.hpp
zoo/tools/: Ref.hpp  aligned_storage.hpp  expected.hpp  shader_compiler.cpp  shader_compiler.hpp
zoo/utility/: aligned_storage.hpp  array.hpp  registry.cpp  registry.hpp
(+205 files in other folders)
